AP-16812: Ensure %-encoding of knime:// URLs
AP-16812 (File Upload Widget does not percent-encode illegal characters in knime:// URLs)